--- a/flaskdb/templates/studentRegistor.html
+++ b/flaskdb/templates/studentRegistor.html
@@ -38,22 +38,43 @@
 {% endblock %}
 
 {% block content %}
-<form action="" method="POST">
-  <input type="hidden" name="seat_name" value="{{ seat_name }}">
-  <div>
-    学籍番号：
-    <input type="text" name="student_num" required>
-  </div>
-  <div>
-    公開設定：
-    <input type="radio" name="open_flg" value=1 checked>公開
-    <input type="radio" name="open_flg" value=0 >非公開
-  </div>
-  <div>
-    <button typr="submit">送信</button>
-  </div>
-</form>
+<div class="container">
+  {% with messages = get_flashed_messages(with_categories=true) %}
+    {% if messages %}
+      {% for category, message in messages %}
+        <div class="alert alert-{{ category }}"> {{ message|capitalize }} </div>
+      {% endfor %}
+    {% endif %}
+  {% endwith %}
+  {% if form %}
+    {% for field in form.errors %}
+      {% for error in form.errors[field] %}
+        <div class="alert alert-danger">{{ error }}</div>
+      {% endfor %}
+    {% endfor %}
+  {% endif %}
+  <form action="{{ url_for('app.seatList') }}" method="POST" novalidate class="mb-10">
+    <div class="form-group">
+      {{ form.seat_name(type="hidden", id="seat_name", value=seat_name, class="form-control") }}
+    </div>
+    <div class="form-group">
+      {{ form.student_num.label }}</br>
+      {{ form.student_num(type="text", id="student_num", class="form-control", placeholder="Enter keyword") }}
+    </div>
+    <div class="form-group">
+      {{ form.open_flg.label }}</br>
+      {% for subopen in form.open_flg %}
+      <tr>
+        <td>{{ subopen }}</td>
+        <td>{{ subopen.label }}</td>
+      </tr>
+      {% endfor %}
+    </div>
 
+    {{ form.csrf_token }}
+    {{ form.cancel(class="btn") }}
+    {{ form.submit(class="btn btn-primary") }}
+  </form>
 {% endblock %}
 
 {% block scripts %}
