--- a/flaskdb/templates/seatList.html
+++ b/flaskdb/templates/seatList.html
@@ -39,6 +39,14 @@
 
 {% block content %}
 <div class="container">
+    {% for seat in seat_list %}
+    {% if seat.student_num==0 %}
+    <li style="color:black">{{ seat.seat_name }}</li>
+    {% else %}
+    <li style="color:blue">{{ seat.seat_name }}</li>
+    {% endif %}
+    {% endfor %}
+    
 
 </div>
 {% endblock %}
