--- a/flaskdb/templates/seatList.html
+++ b/flaskdb/templates/seatList.html
@@ -40,7 +40,8 @@
 {% block content %}
 <div class="container">
     {% for seat in seat_list %}
-    {% if seat.student_num==0 %}
+    <!-- state=0:非公開（黒）, state=1:公開（青） -->
+    {% if seat.state==0 %}
     <li style="color:black">{{ seat.seat_name }}</li>
     {% else %}
     <li style="color:blue">{{ seat.seat_name }}</li>
