--- a/flaskdb/templates/seatList.html
+++ b/flaskdb/templates/seatList.html
@@ -42,9 +42,9 @@
     {% for seat in seat_list %}
     <!-- state=0:非公開（黒）, state=1:公開（青） -->
     {% if seat.state==0 %}
-    <li style="color:black">{{ seat.seat_name }}</li>
+    <li style="color:black">{{ seat.seat_name }}空席</li>
     {% else %}
-    <li style="color:blue">{{ seat.seat_name }}</li>
+    <li style="color:blue">{{ seat.seat_name }}使用中</li>
     {% endif %}
     {% endfor %}
 </div>
