--- a/flaskdb/templates/studentDetail.html
+++ b/flaskdb/templates/studentDetail.html
@@ -39,30 +39,23 @@
 
 {% block content %}
 <div class="container">
-  {% for seat in seat_list %}
+  <a href="{{ url_for('app.seatList') }}">座席表</a>
   <table>
-    <tr>
-    <!-- state=0:非公開（黒）, state=1:公開（青） -->
-    {% if seat.state==0 %}
-      <td style="color:black">{{ seat.seat_name }}</td>
-      <td>空席</td>
-    {% else %}
       {% for student in student_list %}
-        {% if seat.student_num==student.student_num %}
-          {% if student.open_flg==1 %}
-            <td style="color:blue">{{ seat.seat_name }}</td>
-            <td>使用中</td>
-            <td><a href="{{ url_for('app.studentDetail', student_num=seat.student_num) }}">詳細</a></td>
-          {% elif student.open_flg==0 %}
-            <td style="color:gray">{{ seat.seat_name }}</td>
-            <td>使用中</td>
-          {% endif%}
-        {% endif%}
-      {% endfor%}
-    {% endif %}
-    </tr>
-    </table>
-    {% endfor %}
+      <tr>
+          <th>Student Name</th>
+          <td>{{ student.student_name }}</td>
+      </tr>
+      <tr>
+        <th>Study Category</th>
+        <td>{{ student.study_category }}</td>
+      </tr>
+      <tr>
+        <th>Study Content</th>
+        <td>{{ student.study_content }}</td>
+      </tr>
+      {% endfor %}
+  </table>
 </div>
 {% endblock %}
 
